--- a/Upload/src/JCV/CoreBundle/Resources/views/base.html.twig
+++ b/Upload/src/JCV/CoreBundle/Resources/views/base.html.twig
@@ -33,6 +33,11 @@
                 locale   : '{{ app.request.locale }}'
         }
         </script>
+        <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+        <script type="text/javascript">
+            google.load("visualization", "1", {packages:["corechart", 'table', 'treemap', 'gauge']});
+            google.load('jquery', '1.6.0');
+        </script>
         {% javascripts 'js/jquery-1.11.1.js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
         {% endjavascripts %}
@@ -48,6 +53,7 @@
         {% javascripts 'js/jquery.blockUI.js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
         {% endjavascripts %}
+
     </head>
     <body>
 
