--- a/Upload/src/JCV/UploadBundle/Resources/views/Upload/show.html.twig
+++ b/Upload/src/JCV/UploadBundle/Resources/views/Upload/show.html.twig
@@ -6,6 +6,8 @@
 
 {{ include("JCVUploadBundle:Upload:showUploadTable.html.twig") }}
 
+{{ include("JCVUploadBundle:Upload:showActivityTable.html.twig") }}
+
 {{ include("JCVUploadBundle:Upload:showUploadSharts.html.twig") }}
 
     <p>
