--- a/Upload/src/JCV/UploadBundle/Resources/views/Upload/show.html.twig
+++ b/Upload/src/JCV/UploadBundle/Resources/views/Upload/show.html.twig
@@ -8,6 +8,8 @@
 
 {{ include("JCVUploadBundle:Upload:showActivityTable.html.twig") }}
 
+{{ include("JCVUploadBundle:Upload:showLapTable.html.twig") }}
+
 {{ include("JCVUploadBundle:Upload:showUploadSharts.html.twig") }}
 
     <p>
