--- a/Ecommerce/src/Ecommerce/EcommerceBundle/Resources/views/Panier/livraison.html.twig
+++ b/Ecommerce/src/Ecommerce/EcommerceBundle/Resources/views/Panier/livraison.html.twig
@@ -8,80 +8,41 @@
             <div id="collapseOne" class="accordion-body collapse in">
                 <div class="accordion-inner">
                     <div class="col-lg-4">
-                        <form action="{{ path('validation') }}">
+                        {%  if user.adresses|length != 0  %}
+                        <form action="{{ path('validation') }}" method="POST">
                             <h4>Adresse de livraison</h4>
-                            <label class="radio">
-                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                                3b rue jules paulo, 75 000 Paris <a href="#"><i class="icon-trash"></i></a>
-                            </label>
-                            <label class="radio">
-                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                                4b rue jules paulo, 75 000 Paris <a href="#"><i class="icon-trash"></i></a>
-                            </label>
-                            <label class="radio">
-                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                                5b rue jules paulo, 75 000 Paris <a href="#"><i class="icon-trash"></i></a>
-                            </label>
+                            {% for adresse in user.adresses %}
+                                <label class="radio">
+                                    <input type="radio" name="livraison" value="{{ adresse.id }}" {% if loop.index0 == 0 %}checked="checked"{% endif %}>
+                                    {{ adresse.adresse }}, {{ adresse.cp }} {{ adresse.ville }} - {{ adresse.pays }} <a href="{{ path('livraisonAdresseSuppression', { 'id' : adresse.id }) }}"><i class="fa fa-trash fa-fw"></i></a>
+                                    <br /> {{ adresse.nom }} {{ adresse.prenom }}
+                                </label>
+                            {% endfor %}
 
                             <br /><br />
 
                             <h4>Adresse de facturation</h4>
-                            <label class="radio">
-                                <input type="radio" name="optionsRadios2" id="optionsRadios1" value="option1" checked="">
-                                3b rue jules paulo, 75 000 Paris <a href="#"><i class="icon-trash"></i></a>
-                            </label>
-                            <label class="radio">
-                                <input type="radio" name="optionsRadios2" id="optionsRadios1" value="option1" checked="">
-                                4b rue jules paulo, 75 000 Paris <a href="#"><i class="icon-trash"></i></a>
-                            </label>
-                            <label class="radio">
-                                <input type="radio" name="optionsRadios2" id="optionsRadios1" value="option1" checked="">
-                                5b rue jules paulo, 75 000 Paris <a href="#"><i class="icon-trash"></i></a>
-                            </label>
-                            <button class="btn btn-primary">Valider mon adresse de livraison</button>
+                            {% for adresse in user.adresses %}
+                                <label class="radio">
+                                    <input type="radio" name="facturation" value="{{ adresse.id }}" {% if loop.index0 == 0 %}checked="checked"{% endif %}>
+                                    {{ adresse.adresse }}, {{ adresse.cp }} {{ adresse.ville }} - {{ adresse.pays }} <a href="{{ path('livraisonAdresseSuppression', { 'id' : adresse.id }) }}"><i class="fa fa-trash fa-fw"></i></a>
+                                    <br />{{ adresse.prenom }} {{ adresse.nom }}
+                                </label>
+                            {% endfor %}
+
+                            <br />
+
+
+                            <button class="btn btn-primary">Valider mes adresses</button>
                         </form>
+                        {% endif %}
                     </div>
 
 
                     <div class="col-lg-4 col-lg-offset-2">
                         <h4>Ajouter une nouvelle adresse</h4>
-                        <form>
-                            <div class="form-group">
-                                <label>Nom</label>
-                                <input type="text" class="form-control">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Prénom</label>
-                                <input type="text" class="form-control">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Adresse</label>
-                                <input type="text" class="form-control">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Ville</label>
-                                <input type="text" class="form-control">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Code postal</label>
-                                <input type="text" class="form-control">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Ville</label>
-                                <input type="text" class="form-control">
-                            </div>
-
-                            <div class="form-group">
-                                <label>Téléphone</label>
-                                <input type="text" class="form-control">
-                            </div>
-
-
+                        <form action="{{ path('livraison') }}" method="POST">
+                            {{ form_widget(form) }}
                             <button class="btn btn-primary">Ajouter</button>
                         </form>
                     </div>
