--- a/Ecommerce/src/Ecommerce/EcommerceBundle/Resources/views/Panier/panier.html.twig
+++ b/Ecommerce/src/Ecommerce/EcommerceBundle/Resources/views/Panier/panier.html.twig
@@ -1,5 +1,13 @@
 {% extends '::layout.html.twig' %}
 
+{% set totalHT = 0 %}
+{% set totalTTC = 0%}
+
+{% set refTva = {} %}
+{% for produit in produits %}
+    {% set refTva = refTva|merge({ ('%' ~ produit.tva.valeur) : 0 }) %}
+{% endfor %}
+
 {% block body %}
     <div class="container">
         <div class="row">
@@ -9,55 +17,68 @@
             </div>
 
             <div class="col-lg-9">
-                <h2>Votre panier</h2>
-                <form>
-                    <table class="table table-striped table-hover">
-                        <thead>
-                        <tr>
-                            <th>Références</th>
-                            <th>Quantité</th>
-                            <th>Prix unitaire</th>
-                            <th>Total HT</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>AB29837</td>
-                            <td>
-                                <select class="col-lg-1"><option>1</option></select>&nbsp;
-                                <a href="#"><i class="fa fa-refresh fa-fw"></i></a>
-                                <a href="#"><i class="fa fa-trash fa-fw"></i></a>
-                            </td>
-                            <td>333,33€</td>
-                            <td>333,33€</td>
-                        </tr>
-                        <tr>
-                            <td>AC34423</td>
-                            <td>
-                                <select class="col-lg-1"><option>1</option></select>&nbsp;
-                                <a href="#"><i class="fa fa-refresh fa-fw"></i></a>
-                                <a href="#"><i class="fa fa-trash fa-fw"></i></a>
-                            </td>
-                            <td>333,33€</td>
-                            <td>666,66€</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </form>
 
-                <dl class="dl-horizontal pull-right">
-                    <dt>Total HT :</dt>
-                    <dd>799,99€</dd>
+                {% for flashMessage in app.session.flashbag.get('success') %}
+                    <div class="alert alert-success">
+                        {{ flashMessage }}
+                    </div>
+                {% endfor %}
 
-                    <dt>TVA :</dt>
-                    <dd>200€</dd>
+                <h2>Votre parnier</h2>
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th>Références</th>
+                        <th>Quantité</th>
+                        <th>Prix unitaire</th>
+                        <th>Total HT</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% if produits|length == 0 %}
+                        <tr>
+                            <td colspan="4"><center>Aucun articles dans votre panier</center></td>
+                        </tr>
+                    {% endif %}
 
-                    <dt>Total:</dt>
-                    <dd>999,99€</dd>
-                </dl>
-                <div class="clearfix"></div>
-                <a href="{{ path('livraison') }}" class="btn btn-success pull-right">Valider mon panier</a>
-                <a href="index.php" class="btn btn-primary">Continuer mes achats</a>
+                    {% for produit in produits %}
+                        <tr>
+                            <form action="{{ path('ajouter', { 'id' : produit.id }) }}">
+                                <td>{{ produit.nom }}</td>
+                                <td>
+                                    <select name="qte" onChange="this.form.submit()">
+                                        {% for i in 1..10 %}
+                                            <option value="{{ i }}" {% if i == panier[produit.id] %} selected="selected" {% endif %}>{{ i }}</option>
+                                        {% endfor %}
+                                    </select>&nbsp;
+                                    <a href="{{ path('supprimer', { 'id' : produit.id }) }}"><i class="fa fa-trash fa-fw"></i></a>
+                                </td>
+                                <td>{{ produit.prix }} €</td>
+                                <td>{{ produit.prix * panier[produit.id] }} €</td>
+                            </form>
+                        </tr>
+                        {% set totalHT = totalHT + (produit.prix * panier[produit.id]) %}
+                        {% set totalTTC = totalTTC + (produit.prix * panier[produit.id])|tva(produit.tva.multiplicate) %}
+                        {% set refTva = refTva|merge({ ('%' ~ produit.tva.valeur) : refTva['%' ~ produit.tva.valeur] + ( produit.prix * panier[produit.id])|montantTva(produit.tva.multiplicate) }) %}
+                    {% endfor %}
+                    </tbody>
+                </table>
+                {% if produits|length != 0 %}
+                    <dl class="dl-horizontal pull-right">
+                        <dt>Total HT :</dt>
+                        <dd>{{ totalHT }} €</dd>
+
+                        {% for key, tva in refTva %}
+                            <dt>TVA {{ key }} :</dt><dd>{{ tva }} €</dd>
+                        {% endfor %}
+
+                        <dt>Total:</dt>
+                        <dd>{{ totalTTC }} €</dd>
+                    </dl>
+                    <div class="clearfix"></div>
+                    <a href="{{ path('livraison') }}" class="btn btn-success pull-right">Valider mon panier</a>
+                {% endif %}
+                <a href="{{ path('produits') }}" class="btn btn-primary">Continuer mes achats</a>
             </div>
 
         </div>
