--- a/Ecommerce/src/Ecommerce/EcommerceBundle/Resources/views/Panier/validation.html.twig
+++ b/Ecommerce/src/Ecommerce/EcommerceBundle/Resources/views/Panier/validation.html.twig
@@ -1,5 +1,6 @@
 {% extends '::layout.html.twig' %}
 
+
 {% block body %}
     <div class="container">
         <div class="row">
@@ -10,7 +11,6 @@
 
             <div class="col-lg-9">
                 <h2>Valider mon panier</h2>
-                <form>
                     <table class="table table-striped table-hover">
                         <thead>
                         <tr>
@@ -21,38 +21,57 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td>AB29837</td>
-                            <td>
-                                2
-                            </td>
-                            <td>333,33€</td>
-                            <td>333,33€</td>
-                        </tr>
-                        <tr>
-                            <td>AC34423</td>
-                            <td>
-                                1
-                            </td>
-                            <td>333,33€</td>
-                            <td>666,66€</td>
-                        </tr>
+                        {% for produit in commande.produits.produit %}
+                            <tr>
+                                <td>{{ produit.reference }}</td>
+                                <td>
+                                    {{ produit.quantite }}
+                                </td>
+                                <td>{{ produit.prixHT }} €</td>
+                                <td>{{ produit.prixHT * produit.quantite }} €</td>
+                            </tr>
+                        {% endfor %}
                         </tbody>
                     </table>
-                </form>
 
                 <dl class="dl-horizontal pull-right">
-                    <dt>Total HT :</dt>
-                    <dd>799,99€</dd>
+                    <dt>Total HT :</dt><dd>{{ commande.produits.prixHT }} €</dd>
 
-                    <dt>TVA :</dt>
-                    <dd>200€</dd>
+                    {% for key, tva in commande.produits.tva %}
+                        <dt>TVA {{ key }} :</dt><dd>{{ tva }} €</dd>
+                    {% endfor %}
 
-                    <dt>Total:</dt>
-                    <dd>999,99€ TTC</dd>
+                    <dt>Total TTC :</dt><dd>{{ commande.produits.prixTTC }} €</dd>
                 </dl>
+
+                <div class="col-lg-3 pull-left">
+                    <dl class="pull-left">
+                        <dt><h4>Adresse de livraison</h4></dt>
+                        <dt>{{ commande.produits.livraison.prenom }} {{ commande.produits.livraison.nom }}</dt>
+                        <dt>{{ commande.produits.livraison.adresse }}</dt>
+                        <dt>{{ commande.produits.livraison.cp }} {{ commande.produits.livraison.ville }} - {{ commande.produits.livraison.pays }}</dt>
+                    </dl>
+                </div>
+
+                <div class="col-lg-3 pull-left">
+                    <dl class="pull-left">
+                        <dt><h4>Adresse de facturation</h4></dt>
+                        <dt>{{ commande.produits.facturation.prenom }} {{ commande.produits.facturation.nom }}</dt>
+                        <dt>{{ commande.produits.facturation.adresse }}</dt>
+                        <dt>{{ commande.produits.facturation.cp }} {{ commande.produits.facturation.ville }} - {{ commande.produits.facturation.pays }}</dt>
+                    </dl>
+                </div
+
+
                 <div class="clearfix"></div>
-                <a href="#" class="btn btn-success pull-right">Payer</a>
+
+                <form action="{{ path('validationCommande', { 'id' : commande.id }) }}" method="POST"/>
+                    <input name="token" type="hidden" value="{{ commande.produits.token }}" />
+                    <input name="prix" type="hidden" value="{{ commande.produits.prixTTC }}" />
+                    <input name="date" type="hidden" value="{{ commande.date|date('dmyhms') }}" />
+                    <button type="submit" class="btn btn-success pull-right">Payer</button>
+                </form>
+                <a href="{{ path('livraison') }}" class="btn btn-primary">retour</a>
             </div>
 
         </div>
