--- a/Ecommerce/src/Ecommerce/EcommerceBundle/Resources/views/Produits/presentation.html.twig
+++ b/Ecommerce/src/Ecommerce/EcommerceBundle/Resources/views/Produits/presentation.html.twig
@@ -1,33 +1,45 @@
 {% extends '::layout.html.twig' %}
 
+{% block title %}{{ produit.nom }}{% endblock %}
+{% block description %}{{ produit.description }}{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row">
 
             <div class="col-lg-3">
                 {% include '::modulesUsed/navigation.html.twig' %}
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    {% include 'UsersBundle:Default:modulesUsed/usersConnecte.html.twig' %}
+                {% else %}
+                    {% include 'UsersBundle:Default:modulesUsed/users.html.twig' %}
+                {% endif %}
             </div>
 
             <div class="col-lg-9">
                 <div class="row">
                     <div class="col-lg-5">
-                        <img src="../img/plate-thai-food_small.jpg" alt="Ecommerce" width="350" height="290">
+                        <img src={{ produit.image.path }} alt="Ecommerce" width="350" height="290">
                     </div>
 
                     <div class="col-lg-4">
-                        <h4>Item Brand and Category</h4>
-                        <h5>AB29837 Item Model</h5>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                        <h4>3.33€</h4>
-                        <form action="panier.php">
-                            <select name="qte" class="span1">
-                                <option>1</option>
-                            </select>
+                        <h4>{{ produit.nom }}</h4>
+                        <h5>{{ produit.categorie.nom }}</h5>
+                        <p>{{ produit.description }}</p>
+                        <h4>{{ produit.prix|tva(produit.tva.multiplicate) }}</h4>
+                        {#{% if panier[produit.id] is not defined %}#}
+                            <form action="{{ path('ajouter', {'id' : produit.id }) }}">
+                                <select name="qte" class="span1">
+                                    {% for i in 1..10 %}
+                                        <option value="{{ i }}">{{ i }}</option>
+                                    {% endfor %}
+                                </select>
 
-                            <div>
-                                <button class="btn btn-primary">Ajouter au panier</button>
-                            </div>
-                        </form>
+                                <div>
+                                    <button class="btn btn-primary">Ajouter au panier</button>
+                                </div>
+                            </form>
+                        {#{% endif %}#}
 
                     </div>
                 </div>
